--- a/web/src/app/po/supplier-po/supplier-po.component.html
+++ b/web/src/app/po/supplier-po/supplier-po.component.html
@@ -27,7 +27,7 @@
                                 <div class="col-md-2" *ngIf="this.orderComplete == true">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Select Supplier</mat-label>
-                                        <mat-select name="supplier" [(ngModel)]="data.SupplierID"
+                                        <mat-select name="supplier" [(ngModel)]="supplierID"
                                             [ngModelOptions]="{standalone: true}">
                                             <mat-option value="All">All</mat-option>
                                             <mat-option *ngFor="let s of supplierList  let i = index;" value="{{s.ID}}">
@@ -77,19 +77,14 @@
 
                     <div class="row">
                         <div class="col-md-4 col-8 ">
-                            <button class="hover" *ngIf="this.orderSupplier" (click)="openModal(content)"  type="button" mat-raised-button color="primary">
-                              Order (Supplier)
-                            </button>
                             <button class="hover" type="button"
-                            [ngClass]="{'bcolor1': this.orderSupplier == true }" (click)="Unassigned()" class="ms-3" type="button" mat-raised-button color="primary">
+                            [ngClass]="{'bcolor1': this.orderSupplier == true }" (click)="Unassigned()" class="ms-0" type="button" mat-raised-button color="primary">
                                 ORDER PENDING 
                             </button>
                             <button class="hover" (click)="Assigned()" [ngClass]="{'bcolor': this.orderComplete  == true }" class="ms-3" type="button" mat-raised-button color="primary">
-                             ORDER LIST 
+                             ORDER DONE
                             </button>
-                            <button *ngIf="this.orderComplete" class="hover" (click)="assignSupplierPo('Cancel')"  class="ms-3" type="button" mat-raised-button color="primary">
-                                ORDER CANCEL 
-                               </button>
+                         
                         </div>
                        
                         <div *ngIf="this.orderComplete == true" class="col-md-3 col-4 mx-md-auto" style="margin-top:0px;">
@@ -114,7 +109,7 @@
 
                     <div class="body mt-2">
                         <div class="row">
-                            <div class="col-sm-12" style="overflow: auto; height: 530px;">
+                            <div class="col-sm-12" style="overflow: auto; height: 450px;">
                                 <table class="table table-striped table-hover table-sm table-bordered"
                                     style="border: 2px solid #fff !important; ">
                                     <thead class="text-center">
@@ -161,7 +156,18 @@
                                             </td>
                                         </tr>
                                     </tbody>
+                                   
                                 </table>
+                            </div>
+                        </div>
+                        <div class="row" style="border-top: 1px solid #00000047;">
+                            <div class="col-md-2 mx-auto p-3">
+                                    <button class="hover" [disabled]="this.orderSupplierbtn" *ngIf="this.orderSupplier" (click)="openModal(content)"  type="button" mat-raised-button color="primary">
+                                        Order (Supplier)
+                                    </button>
+                                    <button [disabled]="this.orderSupplierbtn" *ngIf="this.orderComplete" class="hover" (click)="assignSupplierPoCancel('Cancel')"  class="ms-3" type="button" mat-raised-button color="primary">
+                                        ORDER CANCEL 
+                                    </button>
                             </div>
                         </div>
                     </div>
@@ -174,7 +180,7 @@
 <!-- supplier order -->
 <ng-template #content role="document" let-modal>
     <div class="modal-header" style="height: 50px; border-bottom: #ff651e 3px solid;">
-        <h3 class="modal-title header pt-2" id="exampleModalLabel" style="font-weight: bolder;">Assing To Vendor</h3>
+        <h3 class="modal-title header pt-2" id="exampleModalLabel" style="font-weight: bolder;">Assign To Supplier</h3>
         <button type="button" class="btn-close" aria-hidden="true" (click)="modal.dismiss('Cross click')"></button>
     </div>
     <div class="modal-body">
@@ -183,7 +189,7 @@
                 <mat-form-field class="example-full-width mb-0">
                     <mat-label>Select Supplier</mat-label>
                     <mat-select name="supplier" [(ngModel)]="supplierID" [ngModelOptions]="{standalone: true}">
-                        <mat-option value="All">All</mat-option>
+                        <!-- <mat-option value="All">All</mat-option> -->
                         <mat-option *ngFor="let s of supplierList  let i = index;" value="{{s.ID}}">
                             {{s.Name}}
                         </mat-option>
