--- a/web/src/app/po/supplier-po/supplier-po.component.html
+++ b/web/src/app/po/supplier-po/supplier-po.component.html
@@ -87,7 +87,7 @@
                          
                         </div>
                        
-                        <div *ngIf="this.orderComplete == true" class="col-md-3 col-4 mx-md-auto" style="margin-top:0px;">
+                        <div *ngIf="this.orderComplete == true" class="col-md-4 col-4 mx-md-auto" style="margin-top:0px;">
                           <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false" ngbPaginationEllipsis
                             [collectionSize]="collectionSize" #numPages [pageSize]="itemsPerPage" [(page)]="currentPage"
                             (pageChange)="getList()" [maxSize]="5" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
@@ -116,7 +116,7 @@
                                         <tr>
                                             <th>
                                                 <mat-checkbox class="example-margin" color="primary"
-                                                    (click)="multicheck()"></mat-checkbox>
+                                                    (click)="multicheck($event)"  [checked]="this.multiCheck"></mat-checkbox>
                                             </th>
                                             <th>SNo</th>
                                             <th>MRD No</th>
@@ -129,6 +129,7 @@
                                             <th>Qty</th>
                                             <th>SupplierName</th>
                                             <th>ShopName</th>
+                                            <th *ngIf="this.orderComplete === true">SupplierDocNo</th>
                                         </tr>
                                     </thead>
                                     <tbody class="text-center">
@@ -137,7 +138,8 @@
                                                 <input type="checkbox" class="example-margin" id="{{v.ID}}"
                                                     [(ngModel)]="v.checked" color="primary" [checked]="v.Sel"
                                                     (click)="validate(v, $event)" name="feature{{v.ID}}"
-                                                    value="{{v.Sel}}" style="width: 20px; height: 16px;">
+                                                    value="{{v.Sel}}" style="width: 20px; height: 16px;  z-index: 999 !important;
+                                                    position: relative !important; ">
 
                                                     <button class="ms-1 bg-none m"  type="button" (click)="openModal1(content1,v)"  >  <mat-icon class="msg pt-1 ms-1">remove_red_eye</mat-icon> </button>
                                             </td>
@@ -154,6 +156,11 @@
                                             <td>{{v.ShopName}}<span [style.color]="'blue'"
                                                     *ngIf="v.AreaName !== 'null'">({{v.AreaName}})</span>
                                             </td>
+                                            <td *ngIf="this.orderComplete === true">
+                                                <input class="inputWidth"  name="SupplierDocNo{{v.ID}}"
+                                                 [(ngModel)]="v.SupplierDocNo"  required 
+                                                #TAmountcontrol [autocomplete]="false" [disabled]="v.Sel !== 1" >
+                                            </td>
                                         </tr>
                                     </tbody>
                                    
@@ -161,12 +168,18 @@
                             </div>
                         </div>
                         <div class="row" style="border-top: 1px solid #00000047;">
-                            <div class="col-md-2 mx-auto p-3">
-                                    <button class="hover" [disabled]="this.orderSupplierbtn" *ngIf="this.orderSupplier" (click)="openModal(content)"  type="button" mat-raised-button color="primary">
+                            <div class="col-md-2 mx-auto p-3" *ngIf="this.orderSupplier" >
+                                    <button class="hover mx-auto" [disabled]="this.orderSupplierbtn" (click)="openModal(content)"  type="button" mat-raised-button color="primary">
                                         Order (Supplier)
                                     </button>
-                                    <button [disabled]="this.orderSupplierbtn" *ngIf="this.orderComplete" class="hover" (click)="assignSupplierPoCancel('Cancel')"  class="ms-3" type="button" mat-raised-button color="primary">
+                            </div>
+                            <div class="col-md-3 mx-auto p-3" *ngIf="this.orderComplete">      
+                                    <button [disabled]="this.orderSupplierbtn"  class="hover" (click)="assignSupplierPoCancel('Cancel')"  class="ms-3" type="button" mat-raised-button color="primary">
                                         ORDER CANCEL 
+                                    </button>
+
+                                    <button [disabled]="this.orderSupplierbtn"  class="hover" (click)="assignSupplierDoc()"  class="ms-3" type="button" mat-raised-button color="primary">
+                                        Supplier DocNo
                                     </button>
                             </div>
                         </div>
