--- a/web/src/app/po/purchase-convert/purchase-convert.component.html
+++ b/web/src/app/po/purchase-convert/purchase-convert.component.html
@@ -221,21 +221,21 @@
                             <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
                                 <mat-form-field class="example-full-width mb-0">
                                     <mat-label>Quantity</mat-label>
-                                    <input matInput name="Quantityt" [(ngModel)]="PurchaseMaster.Quantity"
+                                    <input matInput name="Quantity" [(ngModel)]="PurchaseMaster.Quantity"
                                         disabled #Quantitytcontrol [autocomplete]="false">
                                 </mat-form-field>
                             </div>
                             <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
                                 <mat-form-field class="example-full-width mb-0">
                                     <mat-label>Sub Total</mat-label>
-                                    <input matInput name="SubTotalt" [(ngModel)]="PurchaseMaster.SubTotal"
+                                    <input matInput name="SubTotal" [(ngModel)]="PurchaseMaster.SubTotal"
                                         disabled #SubTotaltcontrol [autocomplete]="false">
                                 </mat-form-field>
                             </div>
                             <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
                                 <mat-form-field class="example-full-width mb-0">
                                     <mat-label>D.Amount</mat-label>
-                                    <input matInput name="DAmountt"
+                                    <input matInput name="DAmount"
                                         [(ngModel)]="PurchaseMaster.DiscountAmount" disabled
                                         #DAmounttcontrol [autocomplete]="false">
                                 </mat-form-field>
