--- a/web/src/app/sale/bill/bill.component.html
+++ b/web/src/app/sale/bill/bill.component.html
@@ -36,7 +36,7 @@
                 <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Entry Type</mat-label>
-                        <mat-select name="Category" [(ngModel)]="category" required #Typecontrol>
+                        <mat-select name="category" [(ngModel)]="category" required #Typecontrol>
                             <mat-option value="Product">Product</mat-option>
                             <mat-option value="Services">Service</mat-option>
                         </mat-select>
