--- a/web/src/app/sale/bill/bill.component.html
+++ b/web/src/app/sale/bill/bill.component.html
@@ -307,6 +307,16 @@
                         </mat-error>
                     </mat-form-field>
                 </div>
+                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-12 mb-0" *ngIf="this.BillItem.PreOrder === true">
+                    <mat-form-field class="example-full-width mb-0">
+                        <mat-label>PurchasePrice</mat-label>
+                        <input matInput type="number"  name="PurchasePrice" [(ngModel)]="BillItem.PurchasePrice" required
+                            (blur)="calculations('UnitPrice', 'subTotal')" #UnitPricecontrol [autocomplete]="false">
+                        <mat-error>
+                            PurchasePrice is required
+                        </mat-error>
+                    </mat-form-field>
+                </div>
                 <div class="col-xl-1 col-lg-1 col-md-1 col-sm-12 mb-0">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Quantity</mat-label>
