--- a/web/src/app/common/common.component.html
+++ b/web/src/app/common/common.component.html
@@ -121,6 +121,7 @@
               <a href="javascript:void(0)" [routerLink]="['/po/supplierPo']" id="collapseExample">Supplier Po</a>
               <a href="javascript:void(0)" [routerLink]="['/po/convertToPurchase']" id="collapseExample">Convert To Purchase</a>
               <a href="javascript:void(0)" [routerLink]="['/po/supplierPoList']" id="collapseExample">Supplier Po List</a>
+              <a href="javascript:void(0)" [routerLink]="['/po/fitterPo']" id="collapseExample">Fitter Po</a>
             </div>
           </div>
           <!-- companyadmin end Bliing -->
